# kylinqt

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc
TaoQuick/Qml/CusPopup/: CusPopup.qml
components/: DataLabel.qml  ExGuide.qml  ImageArea.qml  ImageRecvArea.qml  ImageSendArea.qml  Indicator.qml  LaserArea.qml  LaserRecvArea.qml  LaserSendArea.qml  Modeselect.qml  MyComboBox.qml  MySwitch.qml  MyTabar.qml  MyTextField.qml  MyTextFieldbeta.qml  Mytextfield2.qml  Myvideo.qml  Myvideo2.qml  Myvideo3.qml  Myvideo4.qml  Myvideo5.qml  ProgramMode.qml  Sendarea.qml  Test.qml  TurnTablestatus.qml  remotectlmode.qml
serialport/: serialport.cpp  serialport.h  serialport_image.cpp  serialport_image.h  serialport_laser.cpp  serialport_laser.h  serialport_turntable.cpp  serialport_turntable.h
video/: vlcplayer.cpp  vlcplayer.h
vlcvideo/: VlcVideoItem.cpp  VlcVideoItem.h
